[project]
name = "agentenv_alfworld"
version = "0.0.1"
description = "versions pinned by HJ"
authors = [
    {name = "zsxmwjz", email = "13816862266@163.com"},
]
dependencies = [
    "numpy==1.26.4",
    "gym==0.26.2",
    "fastapi==0.115.8",
    "uvicorn==0.34.0",
    "PyYAML==6.0.2"
    ]
requires-python = "~=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
alfworld = "agentenv_alfworld:launch"
